# untitled-game

./: .gitignore  CMakeLists.txt  README.md
src/: Vec2.h  animatedsprite.cpp  animatedsprite.h  assets.cpp  assets.h  button.cpp  button.h  buttonbase.cpp  buttonbase.h  buttongroup.cpp  buttongroup.h  buttontext.cpp  buttontext.h  buttontexture.cpp  buttontexture.h  canvas.cpp  canvas.h  deadtrigger.cpp  deadtrigger.h  debug.cpp  debug.h  entity.cpp  entity.h  game.cpp  game.h  hitbox.cpp  hitbox.h  input.cpp  input.h  main.cpp  maths.cpp  maths.h  padding.cpp  padding.h  particle.cpp  particle.h  particlesystem.cpp  particlesystem.h  player.cpp  player.h  (+21 more)
